[project]
name = "fakenewschecker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "grpcio>=1.78.0",
    "grpcio-tools>=1.78.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
